--- a/personal.html
+++ b/personal.html
@@ -18,18 +18,24 @@
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
 	  </nav>
-	</header>
 
-	<h1>Family</h1>
+	  <h1>Family</h1>
+
+	</header>
 	
 	<main>
-	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
+
+	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		<img src = "imgs/wisconsin_dells.jpg" alt = "Wisconsin Dells" width="25"/>
 		<img src = "imgs/badlands.jpg" alt = "BadLands" width="1000"/>
 		<img src = "imgs/falling.jpg" alt = "Falling" width="25"/>
 		<img src = "imgs/jewel_cave.jpg" alt = "Jewel Cave" width="1000"/>
 	</main>
-	Colleen van Lent &copy; 2020
+
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
+
 </body>
 </html>
 
